# pi-server-vm

./: .bump-my-version.cfg  .bumpversion.cfg  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  GEMINI.md  INSTALL_LINUX.md  INSTALL_MACOS.md  INSTALL_WINDOWS.md  LINUX_HOST_SETUP_GUIDE.md  README.md  build.py  clone-vm.spec  create-master-vm.spec  create_master_vm.py  download_latest_release.py  downloader.spec  file_version_info.txt  installer.iss  mkdocs.yml  pyproject.toml  release.py  requirements.txt  run_clone.py  run_create_master.py  setup.cfg  version.py  vm_manager.py  web-app.spec
.github/: FUNDING.yml
.github/workflows/: build_release.yml
docs/: index.md
docs/install/: INSTALL_MACOS.md  INSTALL_WINDOWS.md
scripts/: __main__.py  clone_vm.py  create_master_vm.py  vm_manager.py
tests/: test_build_process.py  test_clone_vm.py  test_downloader_script.py  test_installer_creation.py  test_release_script.py
webapp/: app.py
webapp/templates/: index.html
