[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-server-vm"
version = "1.3.1"
description = "Python scripts to automate the creation and cloning of Raspberry Pi virtual machine templates in VirtualBox."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" }
authors = [
  { name = "Henk Van Hoek", email = "b419ce9ae8@sinenomine.email" },
]

dependencies = [
    "requests",
    "flask",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "bump2version",
    "pyinstaller",
    "pre-commit"
]

[tool.setuptools.packages.find]
where = ["."]
