[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-server-vm"
version = "1.4.1"
description = "Python scripts to automate the creation and cloning of Raspberry Pi virtual machine templates in VirtualBox."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" }
authors = [
  { name = "Henk Van Hoek", email = "b419ce9ae8@sinenomine.email" },
]

dependencies = [
    "requests",
    "flask",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "bump-my-version",
    "pyinstaller",
    "pre-commit",
    "uv"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.bump-my-version]
current_version = "1.4.12"
commit = true
tag = true
message = "Bump version: {current_version} → {new_version}"
tag_name = "v{new_version}"

[[tool.bump-my-version.files]]
path = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bump-my-version.files]]
path = "README.md"
search = "Download the latest release (v{current_version})"
replace = "Download the latest release (v{new_version})"

[[tool.bump-my-version.files]]
path = "file_version_info.txt"
search = "StringStruct(u'FileVersion', u'{current_version}')"
replace = "StringStruct(u'FileVersion', u'{new_version}')"

[[tool.bump-my-version.files]]
path = "file_version_info.txt"
search = "filevers=({current_version_tuple})"
replace = "filevers=({new_version_tuple})"

[[tool.bump-my-version.files]]
path = "file_version_info.txt"
search = "prodvers=({current_version_tuple})"
replace = "prodvers=({new_version_tuple})"
